--- a/2025-09-22.html
+++ b/2025-09-22.html
@@ -56,10 +56,18 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             background-color: white;
             transition: transform 0.2s, box-shadow 0.2s;
+            box-sizing: border-box; /* 確保 padding 不會影響寬高 */
+            min-height: 100%; /* 確保內容不會被擠壓 */
         }
         .flip-card-back {
             transform: rotateY(180deg);
             background-color: #fef3c7;
+            /* New styles to fix overlapping text */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 0.5rem;
         }
         .tooltip-container {
             position: relative;
@@ -200,9 +208,9 @@
         </section>
 
         <section id="vocabulary" class="section-container">
-            <h2 class="text-2xl md:text-3xl font-bold text-stone-900 mb-2">Vocabulary Bank</h2>
+            <h2 class="text-2xl md:text-3xl font-bold text-stone-900 mb-2">Vocabulary Builder</h2>
             <p class="text-stone-600 mb-6">Enrich your vocabulary with key terms from the video. Click on each card to see the Chinese translation and an example sentence. This interactive approach helps reinforce your learning.</p>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 gap-6">
                 <div class="flip-card cursor-pointer">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
