--- a/index.html
+++ b/index.html
@@ -13,129 +13,221 @@
             font-family: 'Inter', 'Noto Sans TC', sans-serif;
             background-color: #F5F5F4;
         }
+        .main-card {
+            background-image: url('https://placehold.co/600x400/fff7ed/ea580c?text=CNN10');
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            color: white;
+            padding: 3rem;
+            border-radius: 1rem;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+            overflow: hidden;
+        }
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1;
+        }
+        .main-card > * {
+            position: relative;
+            z-index: 2;
+        }
+        .button {
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+            box-shadow: 0 4px #d97706;
+        }
+        .button:hover {
+            transform: translateY(2px);
+            box-shadow: 0 2px #d97706;
+        }
+        .button:active {
+            transform: translateY(4px);
+            box-shadow: none;
+        }
+        .report-link {
+            transition: all 0.2s ease-in-out;
+        }
+        .report-link:hover {
+            transform: translateX(5px);
+            color: #d97706;
+            background-color: #fef3c7;
+        }
     </style>
 </head>
 <body class="text-stone-800 flex items-center justify-center min-h-screen">
 
     <main class="container mx-auto px-6 py-8 md:py-12">
-        <div class="bg-white p-8 md:p-12 rounded-xl shadow-lg text-center max-w-2xl mx-auto">
+        <div class="text-center max-w-2xl mx-auto mb-8">
             <h1 class="text-3xl md:text-4xl font-bold mb-2 text-stone-900">CNN 10 快速導讀</h1>
-            <p class="text-lg text-stone-600 mb-8">每天十分鐘，英聽好輕鬆！</p>
-            
-            <div class="space-y-6">
-                <!-- 今日導讀區塊 -->
-                <div class="space-y-4">
-                    <h2 class="text-xl md:text-2xl font-bold mb-4 text-stone-900">檢視今日導讀</h2>
-                    <div id="todayReport" class="flex items-center gap-4 bg-stone-50 hover:bg-amber-100 p-4 rounded-lg transition-colors cursor-pointer text-left">
-                        <img src="https://img.youtube.com/vi/NuzV4rsydMw/hqdefault.jpg" alt="CNN 10 影片封面" class="w-24 h-auto rounded-lg shadow">
-                        <div>
-                            <p class="text-sm text-stone-600 mb-1">今日主題</p>
-                            <p id="todayTopic" class="text-lg font-bold text-stone-700"></p>
-                        </div>
-                    </div>
+            <p class="text-lg text-stone-700">每天十分鐘，英文好輕鬆！</p>
+        </div>
+        <div class="bg-white p-8 md:p-12 rounded-xl shadow-lg text-center max-w-2xl mx-auto mt-8">
+            <h2 class="text-2xl md:text-3xl font-bold mb-4 text-stone-900">最新導讀</h2>
+            <!-- This entire anchor tag will be the clickable card -->
+            <a id="latest-guide-link" href="#" class="block hover:shadow-lg transition-shadow rounded-lg overflow-hidden">
+                <div class="bg-stone-100 rounded-lg p-4">
+                    <img id="latest-guide-thumbnail" class="rounded-lg w-full mb-4" src="https://placehold.co/600x337/E4E4E7/292524?text=Loading..." alt="最新導讀影片封面">
+                    <h3 id="latest-guide-title" class="text-xl md:text-2xl font-bold text-stone-900 mb-2">
+                        Loading...
+                    </h3>
                 </div>
-
-                <hr class="border-stone-200 my-8">
-
-                <div>
-                    <h2 class="text-xl md:text-2xl font-bold mb-4 text-stone-900">近期導讀</h2>
-                    <ul id="recentReportsList" class="space-y-3 text-stone-700">
-                    </ul>
-                </div>
-
-                <hr class="border-stone-200 my-8">
-                <!-- 選擇其他日期區塊 -->
-                <div class="flex flex-col items-center space-y-4">
-                    <h2 class="text-xl md:text-2xl font-bold text-stone-900">選擇其他日期</h2>
-                    <label for="reportDate" class="sr-only">選擇日期</label>
-                    <input type="date" id="reportDate" class="p-3 rounded-lg border border-stone-300 focus:outline-none focus:ring-2 focus:ring-amber-500 w-full md:w-auto text-center">
-                    <button id="viewReportBtn" class="px-8 py-3 bg-amber-600 text-white font-bold rounded-full shadow-md hover:bg-amber-700 transition-colors duration-300">
-                        檢視導讀
-                    </button>
-                </div>
-
-                <hr class="border-stone-200 my-8">
-                <div>
-                    <h2 class="text-xl md:text-2xl font-bold mb-4 text-stone-900">訂閱新內容通知</h2>
-                    <p class="text-sm text-stone-600 mb-4">輸入你的電子郵件，當我們發布新的導讀內容時，將會收到通知。</p>
-                    <div class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-4">
-                        <input type="email" id="emailInput" placeholder="輸入你的電子郵件" class="p-3 rounded-lg border border-stone-300 focus:outline-none focus:ring-2 focus:ring-amber-500 w-full max-w-sm text-center">
-                        <button id="subscribeBtn" class="px-8 py-3 bg-stone-700 text-white font-bold rounded-full shadow-md hover:bg-stone-800 transition-colors duration-300">
-                            訂閱
-                        </button>
-                    </div>
-                    <p id="subscriptionStatus" class="mt-4 text-green-600 font-semibold"></p>
-                </div>
-
-                <hr class="border-stone-200 my-8">
-                <div>
-                    <h2 class="text-xl md:text-2xl font-bold mb-4 text-stone-900">訂閱 RSS</h2>
-                    <p class="text-sm text-stone-600 mb-4">使用你偏好的 RSS 閱讀器訂閱我們的內容，隨時掌握最新動態。</p>
-                    <a href="rss.xml" class="inline-block px-8 py-3 bg-amber-600 text-white font-bold rounded-full shadow-md hover:bg-amber-700 transition-colors duration-300">
-                        取得 RSS Feed
-                    </a>
-                </div>
-
+            </a>
+            <p class="text-stone-500 text-sm mt-4">此內容會在每天凌晨 00:00 更新</p>
+        </div>
+        <div class="bg-white p-8 md:p-12 rounded-xl shadow-lg text-center max-w-2xl mx-auto mt-8">
+            <h2 class="text-2xl md:text-3xl font-bold mb-4 text-stone-900">近期導讀</h2>
+            <div id="recent-readings-list" class="flex flex-col space-y-4 text-left">
+                <!-- Content will be dynamically added here -->
             </div>
+        </div>
+        <div class="bg-white p-8 md:p-12 rounded-xl shadow-lg text-center max-w-2xl mx-auto mt-8">
+            <h2 class="text-2xl md:text-3xl font-bold mb-4 text-stone-900">電子郵件訂閱</h2>
+            <p class="text-stone-700 mb-4">輸入您的電子郵件，以接收每日導讀內容。</p>
+            <div class="flex flex-col md:flex-row gap-4">
+                <input type="email" id="emailInput" placeholder="輸入您的電子郵件..." class="flex-1 p-3 rounded-lg border border-stone-300 focus:outline-none focus:ring-2 focus:ring-amber-500 transition-shadow">
+                <button id="subscribeBtn" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg shadow-lg button">訂閱</button>
+            </div>
+            <p id="subscriptionStatus" class="mt-4 text-sm text-green-600"></p>
+        </div>
+        <div class="bg-white p-8 md:p-12 rounded-xl shadow-lg text-center max-w-2xl mx-auto mt-8">
+            <h2 class="text-2xl md:text-3xl font-bold mb-4 text-stone-900">RSS 訂閱</h2>
+            <p class="text-stone-700 mb-4">複製下方 RSS 網址，在您的閱讀器中訂閱最新內容。</p>
+            <div class="flex flex-col md:flex-row gap-4">
+                <input type="text" id="rssUrl" value="https://example.com/cnn10-feed.xml" readonly class="flex-1 p-3 rounded-lg border border-stone-300 bg-stone-100 text-stone-600 focus:outline-none cursor-copy">
+                <button id="copyRssBtn" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg shadow-lg button">複製 RSS 網址</button>
+            </div>
+            <p id="copyStatus" class="mt-4 text-sm text-green-600"></p>
         </div>
     </main>
 
+    <footer class="mt-8 py-6 text-center text-stone-500 text-sm">
+        <p>CNN 10 互動式導讀 © 2025</p>
+    </footer>
+
     <script>
+        // Use a function to format the date as YYYY-MM-DD
+        function formatDate(date) {
+            const year = date.getFullYear();
+            const month = String(date.getMonth() + 1).padStart(2, '0');
+            const day = String(date.getDate()).padStart(2, '0');
+            return `${year}-${month}-${day}`;
+        }
+
+        // Function to fetch and display the topic from a file
+        async function fetchTopic(date) {
+            const formattedDate = formatDate(date);
+            const fileName = `${formattedDate}.html`;
+            // Construct a full URL to prevent the 'Failed to parse URL' error
+            const fileUrl = window.location.origin + window.location.pathname.replace('index.html', '') + fileName;
+            try {
+                const response = await fetch(fileUrl);
+                if (response.ok) {
+                    const htmlText = await response.text();
+                    const parser = new DOMParser();
+                    const doc = parser.parseFromString(htmlText, 'text/html');
+                    const titleElement = doc.querySelector('title');
+                    // The topic is assumed to be part of the title
+                    const fullTitle = titleElement ? titleElement.textContent : '';
+                    // Extract the topic part, assuming it's after the pipe
+                    const topic = fullTitle.includes('|') ? fullTitle.split('|')[1].trim() : fullTitle;
+                    return topic;
+                }
+            } catch (error) {
+                console.error(`Error fetching topic for ${fileName}:`, error);
+            }
+            return 'N/A';
+        }
+
+        // Function to get the last 7 non-weekend days
+        function getLastSevenWeekdays() {
+            const dates = [];
+            let daysAgo = 1;
+            while (dates.length < 7) {
+                const d = new Date();
+                d.setDate(d.getDate() - daysAgo);
+                // 0 = Sunday, 6 = Saturday
+                if (d.getDay() !== 0 && d.getDay() !== 6) {
+                    dates.push(d);
+                }
+                daysAgo++;
+            }
+            return dates;
+        }
+
+        // Main function to update content
+        async function updateContent() {
+            // Get today's topic
+            const today = new Date();
+            const latestTopic = await fetchTopic(today);
+            const latestGuideLink = document.getElementById('latest-guide-link');
+            const latestGuideThumbnail = document.getElementById('latest-guide-thumbnail');
+            const latestGuideTitle = document.getElementById('latest-guide-title');
+
+            if (latestTopic && latestTopic !== 'N/A') {
+                const formattedDate = formatDate(today);
+                latestGuideLink.href = `${formattedDate}.html`;
+                latestGuideThumbnail.src = `https://placehold.co/600x337/E4E4E7/292524?text=${encodeURIComponent(latestTopic)}`;
+                latestGuideThumbnail.alt = latestTopic;
+                latestGuideTitle.textContent = latestTopic;
+            } else {
+                latestGuideLink.href = '#';
+                latestGuideThumbnail.src = `https://placehold.co/600x337/E4E4E7/292524?text=${encodeURIComponent('No Topic Today')}`;
+                latestGuideThumbnail.alt = 'No topic available';
+                latestGuideTitle.textContent = '今日無導讀內容';
+            }
+
+            // Get recent readings
+            const recentReadingsList = document.getElementById('recent-readings-list');
+            recentReadingsList.innerHTML = ''; // Clear previous list
+            const recentDates = getLastSevenWeekdays();
+            for (const date of recentDates) {
+                const topic = await fetchTopic(date);
+                if (topic && topic !== 'N/A') {
+                    const formattedDate = formatDate(date);
+                    const fileUrl = `${formattedDate}.html`;
+                    const link = document.createElement('a');
+                    link.href = fileUrl;
+                    link.classList.add('report-link', 'bg-stone-100', 'hover:bg-amber-100', 'text-stone-700', 'p-3', 'rounded-lg', 'transition-colors', 'text-left');
+                    link.innerHTML = `<span class="font-bold">${formattedDate}</span> – ${topic}`;
+                    recentReadingsList.appendChild(link);
+                }
+            }
+        }
+
+        // Set up daily content update at midnight
+        function scheduleDailyUpdate() {
+            const now = new Date();
+            const tomorrow = new Date(now);
+            tomorrow.setDate(tomorrow.getDate() + 1);
+            tomorrow.setHours(0, 0, 0, 0);
+            const msUntilMidnight = tomorrow.getTime() - now.getTime();
+            
+            setTimeout(() => {
+                window.location.reload();
+                scheduleDailyUpdate();
+            }, msUntilMidnight);
+        }
+
         document.addEventListener('DOMContentLoaded', () => {
-            const dateInput = document.getElementById('reportDate');
-            const viewBtn = document.getElementById('viewReportBtn');
-            const recentReportsList = document.getElementById('recentReportsList');
+            updateContent();
+            scheduleDailyUpdate();
+
+            // Subscription functionality
             const emailInput = document.getElementById('emailInput');
             const subscribeBtn = document.getElementById('subscribeBtn');
             const subscriptionStatus = document.getElementById('subscriptionStatus');
-            const todayReport = document.getElementById('todayReport');
-            const todayTopic = document.getElementById('todayTopic');
-
-            const recentReportsData = [
-                { date: '2025 年 9 月 19 日', topic: '秋分與社會議題', linkDate: '2025-09-19' },
-                { date: '2025 年 9 月 18 日', topic: '新聞回顧與焦點報導', linkDate: '2025-09-18' },
-                { date: '2025 年 9 月 17 日', topic: '科技與文化趨勢', linkDate: '2025-09-17' },
-                { date: '2025 年 9 月 16 日', topic: '全球經濟與氣候變遷', linkDate: '2025-09-16' },
-                { date: '2025 年 9 月 15 日', topic: '歷史性事件與教育改革', linkDate: '2025-09-15' },
-                { date: '2025 年 9 月 14 日', topic: '藝術文化與環境保護', linkDate: '2025-09-14' }
-            ];
-
-            // 顯示今日主題
-            const todayReportData = recentReportsData[0];
-            todayTopic.textContent = todayReportData.topic;
-            todayReport.addEventListener('click', () => {
-                window.location.href = `${todayReportData.linkDate}.html`;
-            });
-
-            recentReportsData.forEach(item => {
-                const li = document.createElement('li');
-                li.innerHTML = `
-                    <a href="${item.linkDate}.html" class="block bg-stone-50 hover:bg-amber-100 text-stone-700 p-3 rounded-lg transition-colors text-left">
-                        <span class="font-bold">${item.date}</span> – ${item.topic}
-                    </a>
-                `;
-                recentReportsList.appendChild(li);
-            });
-
-            const today = new Date();
-            const year = today.getFullYear();
-            const month = String(today.getMonth() + 1).padStart(2, '0');
-            const day = String(today.getDate()).padStart(2, '0');
-            dateInput.value = `${year}-${month}-${day}`;
-
-            viewBtn.addEventListener('click', () => {
-                const selectedDate = dateInput.value;
-                if (selectedDate) {
-                    window.location.href = `${selectedDate}.html`;
-                } else {
-                    alert('請選擇一個有效的日期。');
-                }
-            });
 
             subscribeBtn.addEventListener('click', () => {
                 const email = emailInput.value;
                 if (email && email.includes('@') && email.includes('.')) {
                     subscriptionStatus.textContent = '感謝您的訂閱！您已成功加入通知列表。';
+                    subscriptionStatus.classList.remove('text-red-600');
+                    subscriptionStatus.classList.add('text-green-600');
                     emailInput.value = '';
                 } else {
                     subscriptionStatus.textContent = '請輸入一個有效的電子郵件地址。';
@@ -143,7 +235,30 @@
                     subscriptionStatus.classList.add('text-red-600');
                 }
             });
+
+            // RSS copy functionality
+            const rssUrlInput = document.getElementById('rssUrl');
+            const copyRssBtn = document.getElementById('copyRssBtn');
+            const copyStatus = document.getElementById('copyStatus');
+
+            copyRssBtn.addEventListener('click', async () => {
+                try {
+                    await navigator.clipboard.writeText(rssUrlInput.value);
+                    copyStatus.textContent = '網址已複製！';
+                    copyStatus.classList.remove('text-red-600');
+                    copyStatus.classList.add('text-green-600');
+                } catch (err) {
+                    // Fallback for older browsers or if permission is denied
+                    rssUrlInput.select();
+                    document.execCommand('copy');
+                    copyStatus.textContent = '網址已複製！';
+                    copyStatus.classList.remove('text-red-600');
+                    copyStatus.classList.add('text-green-600');
+                    console.error('Failed to copy text: ', err);
+                }
+            });
         });
+
     </script>
 </body>
 </html>
