--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
     </footer>
 
     <script>
-        // Use a function to format the date as YYYY-MM-DD
         function formatDate(date) {
             const year = date.getFullYear();
             const month = String(date.getMonth() + 1).padStart(2, '0');
@@ -124,11 +123,13 @@
             return `${year}-${month}-${day}`;
         }
 
-        // Function to fetch the topic and video URL from a daily file
         async function fetchGuideData(date) {
             const formattedDate = formatDate(date);
             const fileName = `${formattedDate}.html`;
-            const fileUrl = `./${fileName}`;
+            
+            // 修正路徑以處理本地文件系統或伺服器環境
+            const fileUrl = window.location.protocol + '//' + window.location.host + window.location.pathname.substring(0, window.location.pathname.lastIndexOf('/')) + '/' + fileName;
+            
             try {
                 const response = await fetch(fileUrl);
                 if (!response.ok) {
@@ -150,15 +151,14 @@
             }
         }
 
-        // Function to get the last 7 non-weekend days
         function getLastSevenWeekdays() {
             const dates = [];
             let daysAgo = 0;
+            const today = new Date();
             while (dates.length < 7) {
-                const d = new Date();
-                d.setDate(d.getDate() - daysAgo);
-                // 0 = Sunday, 6 = Saturday
-                if (d.getDay() !== 0 && d.getDay() !== 6) {
+                const d = new Date(today);
+                d.setDate(today.getDate() - daysAgo);
+                if (d.getDay() !== 0 && d.getDay() !== 6) { // 0 = Sunday, 6 = Saturday
                     dates.push(d);
                 }
                 daysAgo++;
@@ -166,7 +166,6 @@
             return dates;
         }
 
-        // Main function to update content
         async function updateContent() {
             // Get today's guide data
             const today = new Date();
@@ -196,7 +195,7 @@
 
             // Get recent readings
             const recentReadingsList = document.getElementById('recent-readings-list');
-            recentReadingsList.innerHTML = ''; // Clear previous list
+            recentReadingsList.innerHTML = '';
             const recentDates = getLastSevenWeekdays();
             for (const date of recentDates) {
                 const { topic, status } = await fetchGuideData(date);
@@ -212,7 +211,6 @@
             }
         }
 
-        // Set up daily content update at midnight
         function scheduleDailyUpdate() {
             const now = new Date();
             const tomorrow = new Date(now);
@@ -230,7 +228,6 @@
             updateContent();
             scheduleDailyUpdate();
 
-            // Subscription functionality
             const emailInput = document.getElementById('emailInput');
             const subscribeBtn = document.getElementById('subscribeBtn');
             const subscriptionStatus = document.getElementById('subscriptionStatus');
@@ -249,20 +246,17 @@
                 }
             });
 
-            // RSS copy functionality
             const rssUrlInput = document.getElementById('rssUrl');
             const copyRssBtn = document.getElementById('copyRssBtn');
             const copyStatus = document.getElementById('copyStatus');
 
             copyRssBtn.addEventListener('click', async () => {
                 try {
-                    // Use a more modern way to copy text
                     await navigator.clipboard.writeText(rssUrlInput.value);
                     copyStatus.textContent = '網址已複製！';
                     copyStatus.classList.remove('text-red-600');
                     copyStatus.classList.add('text-green-600');
                 } catch (err) {
-                    // Fallback for older browsers or if permission is denied
                     rssUrlInput.select();
                     document.execCommand('copy');
                     copyStatus.textContent = '網址已複製！';
