--- a/2025-09-23.html
+++ b/2025-09-23.html
@@ -97,13 +97,13 @@
                 
                 <div class="bg-white p-6 rounded-xl shadow-md flex flex-col items-center text-center">
                     <div class="text-4xl mb-4">🌡️</div>
-                    <h4 class="font-bold text-lg mb-2">Climate Change in the Arctic</h4>
+                    <h4 class="report-topic font-bold text-lg mb-2">Climate Change in the Arctic</h4>
                     <p class="text-sm text-stone-600">The segment covers the rapid melting of sea ice and its effects on global weather patterns and the ecosystem.</p>
                 </div>
                 
                 <div class="bg-white p-6 rounded-xl shadow-md flex flex-col items-center text-center">
                     <div class="text-4xl mb-4">🪖</div>
-                    <h4 class="font-bold text-lg mb-2">Ukraine's Military Strategy</h4>
+                    <h4 class="report-topic font-bold text-lg mb-2">Ukraine's Military Strategy</h4>
                     <p class="text-sm text-stone-600">An analysis of Ukraine's defensive and offensive military tactics against Russia's ongoing invasion, focusing on recent developments.</p>
                 </div>
 
@@ -111,13 +111,13 @@
                      <div class="chart-container relative w-full max-w-xs mx-auto h-48 mb-4">
                         <canvas id="weatherEventsChart"></canvas>
                     </div>
-                    <h4 class="font-bold text-lg mb-2">Extreme Weather Events</h4>
+                    <h4 class="report-topic font-bold text-lg mb-2">Extreme Weather Events</h4>
                     <p class="text-sm text-stone-600">A look at the increase in the frequency and intensity of hurricanes, floods, and droughts globally, with data from the last decade.</p>
                 </div>
 
                 <div class="bg-white p-6 rounded-xl shadow-md flex flex-col items-center text-center">
                     <div class="text-4xl mb-4">🎨</div>
-                    <h4 class="font-bold text-lg mb-2">New Museum in Paris</h4>
+                    <h4 class="report-topic font-bold text-lg mb-2">New Museum in Paris</h4>
                     <p class="text-sm text-stone-600">A segment on the opening of a new modern art museum in Paris, highlighting its unique architectural design and collection.</p>
                 </div>
 
